[tool.poetry]
name = "tictactoe_yc4336"
version = "0.1.0"
description = "Python package for tictactoe"
authors = ["Cynthia Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
